ver 1.1.2 myBatis 설정, java 기본 패키지 세팅

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# #MyBatis settings
+# mybatis.type-aliases-package=com.mainproject.model
+# mybatis.mapper-locations=mybatis/mappers/**/*.xml
