--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-# #MyBatis settings
-# mybatis.type-aliases-package=com.mainproject.model
-# mybatis.mapper-locations=mybatis/mappers/**/*.xml
+#MyBatis settings
+mybatis.config-location=classpath:mybatis/model/modelConfig.xml
+mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
+
