--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ dependencies {
 	
 	// MySQL Connector Dependency
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.named('test') {
