--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database connection settings (MySQL JDBC)
-spring.datasource.url=jdbc:mysql://103.55.191.11:3306/ANIPLANT?useSSL=false&serverTimezone=UTC&zeroDateTimeBehavior=CONVERT_TO_NULL
+spring.datasource.url=jdbc:mysql://103.55.191.11:3306/ANIPLANT?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=7*k5dx~HH3kj
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,5 +17,4 @@ spring.thymeleaf.suffix=.html
 #MyBatis settings
 mybatis.config-location=classpath:mybatis/model/modelConfig.xml
 mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
-
 
