captcha API key 발급과 image 전송 적용 완료, key와 이미지 비교 로직 필요

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,10 @@ dependencies {
 	
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	
+	// JSON
+	implementation 'org.json:json:20210307'
+	
 }
 
 tasks.named('test') {
