--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 	// Thymeleaf Dependency
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	
 	// MySQL Connector Dependency
 	runtimeOnly 'com.mysql:mysql-connector-j'
