--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ dependencies {
 	
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
