--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings (MySQL JDBC)
-spring.datasource.url=jdbc:mysql://103.55.191.11:3306/ANIPLANT?useSSL=false&serverTimezone=UTC&zeroDateTimeBehavior=CONVERT_TO_NULL
+spring.datasource.url=jdbc:mysql://localhost:3306/comments
 spring.datasource.username=root
-spring.datasource.password=7*k5dx~HH3kj
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Server port configuration
@@ -18,4 +18,5 @@ spring.thymeleaf.suffix=.html
 mybatis.config-location=classpath:mybatis/model/modelConfig.xml
 mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
 
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
