--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://103.55.191.11:3306/ANIPLANT?useSSL=false&serv
 spring.datasource.username=root
 spring.datasource.password=7*k5dx~HH3kj
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.tomcat.uri-encoding=UTF-8 
 
 # Server port configuration
 server.port=8080
@@ -18,5 +19,8 @@ spring.thymeleaf.suffix=.html
 #MyBatis settings
 mybatis.config-location=classpath:mybatis/model/modelConfig.xml
 mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
+
+
+
 
 
