--- a/build.gradle
+++ b/build.gradle
@@ -62,13 +62,17 @@ dependencies {
 	// Thymeleaf Dependency
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	
 	// MySQL Connector Dependency
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	
+	// JSON
+	implementation 'org.json:json:20210307'
+	
 }
 
 tasks.named('test') {
