--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.thymeleaf.suffix=.html
 #MyBatis settings
 mybatis.config-location=classpath:mybatis/model/modelConfig.xml
 mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
+
+spring.profiles.active=dev
