--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Database connection settings (MySQL JDBC)
-spring.datasource.url=jdbc:mysql://localhost:3306/comments
+spring.datasource.url=jdbc:mysql://103.55.191.11:3306/ANIPLANT?useSSL=false&serverTimezone=UTC&zeroDateTimeBehavior=CONVERT_TO_NULL
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=7*k5dx~HH3kj
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.tomcat.uri-encoding=UTF-8 
 
 # Server port configuration
-server.port=8080
+server.port=8080 
 
 # Thymeleaf template-related settings
 spring.thymeleaf.enabled=true
