프로필 편집 페이지 구현, cropper 적용 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ mybatis.config-location=classpath:mybatis/model/modelConfig.xml
 mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
 
 
-#spring.profiles.active=dev
+spring.profiles.active=dev
