--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,6 @@ mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+openai.api.key=your_api_key_here 
 
-spring.profiles.active=dev
+spring.profiles.active=dev 
